[package]
name = "runner"
version = "0.1.1"
edition = "2021"
authors = ["ipetrovbg@gmail.com"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
ctrlc = "3.4.5"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7.8"
